--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-### AL ###
-#Template for AL projects for Dynamics 365 Business Central
 #launch.json folder
 .vscode/
 #Cache folder
@@ -20,3 +18,24 @@ rad.json
 *.flf
 #Test results file
 TestResults.xml
+
+# --- Data files ---
+*.csv
+
+# Common R artifacts
+.Rhistory
+.RData
+.Ruserdata
+.Rproj.user/
+*.Rproj
+
+# R package/library temp files
+.Rapp.history
+
+# Mac / Windows system files
+.DS_Store
+Thumbs.db
+
+# Directories for local outputs
+/data/
+/results/
